# fanniemae-benchmark

./: .gitignore  .sqlfluff  Analysis.ipynb  Mortgage Benchmark - no file copy.ipynb  Mortgage Benchmark no file copy.ipynb  Mortgage Benchmark.ipynb  Parquet read write experiments.ipynb  README.md  convert.py  create_benchmarking.sh  duckdb-window.ipynb  get_data.py  ibis-duckdb.ipynb  ibis-run.py  mySQL Benchmark.ipynb  mySQL_acq_load_template.sql  mySQL_create.sql  mySQL_perf_load_template.sql  mySQL_summary.sql  performance_summary.sql  postgresql Benchmark.ipynb  postgresql_acq_load_template.sql  postgresql_create.sql  postgresql_perf_load_template.sql  postgresql_summary.sql  powermetrics.py  prepare.py  profile.txt  pyproject.toml  requirements.txt  run.py  sql-duckdb.ipynb  summary.sql  tpch.py
benchmark/: fanniemae_summary.py  powercap_rapl.py
mortgage/: convert.py  performance_summary.sql
results/: golion-8year.json  m1-8year.json  variance_test.txt
scripts/: concat.py  convert.py  tpch.py
