[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
py-modules = []
[project]
name = "benchmark"
description = "Benchmarks for Fannie Mae Data"
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "ibis-framework",
    "click",
    "dask[bag]",
    "duckdb",
    "duckdb-engine",
    "pyarrow",
    "wget",
    "memory_profiler",
    "pandas",
    "jinja2",
    "polars",
]
